# mini-snowflake

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  benchmark.py  docker-compose.yml  phase1_PLAN.md  phase3_PLAN.md  phase4_PLAN.md  phase5_PLAN.md  phase6_PLAN.md  pyproject.toml
examples/: distributed_demo.py  engine_demo.py  failure_demo.py  tpch_demo.py  workload.py
src/: cli.py  repl.py  session.py
src/catalog/: __init__.py  stats.py
src/distributed/: __init__.py  coordinator.py  process_runtime.py  protocol.py  shuffle.py  transport.py  worker.py
src/execution/: __init__.py  engine.py  operators.py  row_executor.py  scheduler.py
src/mini_snowflake/: __main__.py  cli.py  repl.py  session.py
src/planner/: __init__.py  (+3 more)
tests/: integration_suite.py  test_benchmark.py  test_benchmark_report.py  test_cli.py  test_cost_model.py  test_distributed_checkpoint.py  test_distributed_execution.py  test_distributed_protocol.py  test_distributed_queries.py  test_distributed_retry.py  test_distributed_shuffle.py  test_distributed_validation.py  test_execution.py  test_failure_validation.py  test_integration.py  test_join_strategy.py  test_optimizer.py  test_parallel_aggregate.py  test_parallel_controls.py  test_parallel_join.py  test_parallel_scan.py  test_phase2_integration.py  test_phase6_showcase.py  test_planner.py  test_process_runtime.py  test_query_matrix.py  test_rewrites.py  test_row_executor.py  test_session.py  test_sql_features.py  test_sql_parser.py  test_stats.py  test_storage.py  test_worker_health.py  test_workload_examples.py  unit_suite.py
(+6 files in other folders)
