[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-snowflake"
version = "0.1.0"
description = "A compact distributed SQL query engine prototype"
requires-python = ">=3.11"

[project.scripts]
mini-snowflake = "mini_snowflake.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

